			CHANGELOG for KAME kit
$KAME: CHANGELOG,v 1.2007 2001/12/13 23:37:33 jinmei Exp $

<200112>
2001-12-13 Shin'ichi Fujisawa	<fujisawa@kame.net>
	* kame/sys/natpt_{defs,dispatch}.[ch]:
	- Add a code to send ICMP "packet too big" message to IPv4
	  host when IPv4 packet is too big (at most 1232 octets,
	  excluding the IPv4 header) to translate into IPv6.  1232
	  comes from 1280 (IPv6 minimum MTU) minus 40 for the IPv6
	  header and 8 for the Fragment header.

	  A problem of the host who does not listen to ICMP is still
	  unsolved.

Thu Dec 13 00:31:47 JST 2001 sakane@kame.net
	* kame/racoon:
	the retransmission logic has been improved.  racoon stores the packet
	that have been sent.  when racoon receives a packet that have been
	processed already, racoon reply a saved packet simply.
	the default timer for waiting each negotiation also has been changed.

2001-12-12 Shin'ichi Fujisawa	<fujisawa@kame.net>
	* kame/sys/netinet6/natpt_{dispatch,tslot,var}.[ch]:
	- Support translation from ICMPv6 that occurred with IPv6 host
	  into ICMPv4 in "IPv4->IPv6" translation.

	  This translation is done even if there is no "IPv6->IPv4"
	  translation rule, but only this ICMPv6 packet is a target of
	  translation.  Because translator examines whether this is
	  ICMP of return more first than translation rule, eventually
	  "IPv6->IPv4" translation rule is not adapted to.

2001-12-12  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/kame/libinet6/getaddrinfo.c: implemented more rules for
	destination address ordering; matching label, higher precedence,
	and longest prefix matching.  Due to differences on sysctl, the
	first two rules are not available for FreeBSD at this moment.

2001-12-11 Shin'ichi Fujisawa	<fujisawa@kame.net>
	* kame/sys/netinet6/natpt_{defs,dispatch,trans,tslot,var}.[ch]:
	- Support fragmented IPv4 packet translation.  
	  Fragmented IPv4 packet is translated into fragmented one or
	  two IPv6 packet.  IPv4 packet larger than 1280 bytes