@@ -1,7 +1,13 @@
 			CHANGELOG for KAME kit
-$KAME: CHANGELOG,v 1.2007 2001/12/13 23:37:33 jinmei Exp $
+$KAME: CHANGELOG,v 1.2008 2001/12/14 08:29:39 suz Exp $
 
 <200112>
+Fri Dec 14 17:19:56 JST 2001	suz@sdl.hitachi.co.jp
+	* kame/sys/netinet6/ip6_mroute.c
+	- s/nexpire/n6expire/, since this global variable is duplicated.
+	  (ip_mroute.c also has a global variable "nexpire" on *BSD
+	   except FreeBSD)
+
 2001-12-13 Shin'ichi Fujisawa	<fujisawa@kame.net>
 	* kame/sys/natpt_{defs,dispatch}.[ch]:
 	- Add a code to send ICMP "packet too big" message to IPv4
